includes/ts_ck_entity_embed_browser.css
.contextual-links-wrapper {
    display: none;
}

.view-content .views-view-grid tr {
    vertical-align: text-top !important;
}

.view-content .ts-ck-entity-embed-browser-entity {
    border: 4px solid #C0C0C0;
    padding: 2px;
}

.view-content .ts-ck-entity-embed-selected-entity {
    border: 4px solid #B63300;
}

.views-exposed-form .views-exposed-widget {
    display: inline-block;
    margin-right: 20px;
}

.views-exposed-form .views-exposed-widget input,
.views-exposed-form .views-exposed-widget select {
    margin-top: 5px;
}

ul.pager {
    padding-left: 0;
}

ul.pager li {
    display: inline-block;
    list-style-type: none;
}

